force-app/main/default/objects/GradeHoraria__c/GradeHoraria__c.object-meta.xml
<CustomObject>
    <label>Grade horária</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grades horárias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>