force-app/main/default/objects/GradeHoraria__c/fields/HoraInicio__c.field-meta.xml
<CustomField>
    <fullName>HoraInicio__c</fullName>
    <label>Hora de início</label>
    <type>Time</type>
</CustomField>