force-app/main/default/objects/GradeHoraria__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grades horárias</relationshipLabel>
    <relationshipName>GradesHorarias</relationshipName>
    <type>Lookup</type>
</CustomField>