force-app/main/default/objects/GradeHoraria__c/fields/LocalTreino__c.field-meta.xml
<CustomField>
    <fullName>LocalTreino__c</fullName>
    <formula>Local__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local de treino</label>
    <type>Text</type>
</CustomField>