force-app/main/default/objects/GradeHoraria__c/fields/NomeTurma__c.field-meta.xml
<CustomField>
    <fullName>NomeTurma__c</fullName>
    <label>Nome da turma</label>
    <referenceTo>Turma__c</referenceTo>
    <relationshipLabel>Grade horária</relationshipLabel>
    <relationshipName>GradesHorarias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>